--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@ project/plugins/project/
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
+
+#Ignore eclipse project files
+.classpath
+.project
+.settings/
